feat: exposed population layer
