# app/src/views/CountryProfileNationalRiskWatch/hooks/useNrwAdminAreas.ts
@@ -3,21 +3,28 @@ import { useNrwRequest } from '#utils/restRequest';
 import {
     type AdminLevel,
     type CountryCodeIso3,
+    type NrwAdminAreaFeatureCollection,
+    type PlaceCode,
 } from '../types';
 import { getAdminAreasQuery } from '../utils';
 
 function useNrwAdminAreas(options: {
     countries: CountryCodeIso3[] | undefined;
-    adminLevels: AdminLevel[];
+    adminLevel: AdminLevel;
+    parentPlaceCode?: PlaceCode;
     skip: boolean;
+    onSuccess?: (adminAreas: NrwAdminAreaFeatureCollection) => void;
 }) {
-    const { countries, adminLevels, skip } = options;
+    const {
+        countries, adminLevel, parentPlaceCode, skip, onSuccess,
+    } = options;
 
     const { response, error } = useNrwRequest({
         url: '/admin-areas',
         apiType: 'nrw',
         skip: skip || !countries?.length,
-        query: getAdminAreasQuery(countries ?? [], adminLevels),
+        query: getAdminAreasQuery(countries ?? [], adminLevel, parentPlaceCode),
+        onSuccess,
     });
 
     return { adminAreas: response, error };
